# subdirs

./: .gdbinit  .gitignore  subdirs.code-workspace  sync-all.sh
auto-makepkg/: CMakeLists.txt
bookmarksync/: CMakeLists.txt
dbus-soundrecorder/: CMakeLists.txt
geocoordinatecalculator/: CMakeLists.txt  CMakePresets.json
passwordmanager/: CMakeLists.txt  android  qml
pianobooster/: CMakeLists.txt
repoindex/: CMakeLists.txt
syncthingtray/: CMakeLists.txt
tageditor/: CMakeLists.txt
videodownloader/: CMakeLists.txt
